--- a/packages/website_v2/src/components/Invest/Invest.scss
+++ b/packages/website_v2/src/components/Invest/Invest.scss
@@ -15,13 +15,13 @@
       font-size: 34px;
       line-height: 34px;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         margin-bottom: 40px;
         font-size: 24px;
       }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       padding: 60px 16px;
       text-align: center;
     }
@@ -52,7 +52,7 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 33px;
 
-  @media screen and (max-width: 1024px) {
+  @media screen and (max-width: 767px) {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     grid-gap: 24px;
@@ -63,7 +63,7 @@
   font-size: 20px;
   line-height: 30px;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     font-size: 18px;
   }
 }
@@ -71,7 +71,7 @@
 .tw__invest__links {
   display: flex;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1024px) {
     flex-direction: column;
     align-items: center;
   }
@@ -81,7 +81,7 @@
     margin-right: 43px;
     z-index: 1;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1024px) {
       width: 100%;
       height: 96px;
       margin-right: 0;
