--- a/packages/website_v2/src/components/TeamPage/TeamPage.scss
+++ b/packages/website_v2/src/components/TeamPage/TeamPage.scss
@@ -25,7 +25,7 @@
       transform: translateY(-500px);
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
       height: 400px;
     }
 
@@ -63,7 +63,7 @@
       line-height: 79px;
       z-index: 1;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 767px) {
         text-align: center;
         font-size: 42px;
         line-height: 50px;
@@ -121,7 +121,7 @@
         }
 
         .tw__team__members__section-title {
-          @media screen and (max-width: 768px) {
+          @media screen and (max-width: 767px) {
             text-align: center;
           }
 
@@ -149,7 +149,7 @@
           display: flex;
           flex-wrap: wrap;
 
-          @media screen and (max-width: 768px) {
+          @media screen and (max-width: 767px) {
             flex-direction: column;
             align-items: center;
           }
@@ -157,8 +157,9 @@
           .tw__team__members__profile {
             padding: 16px;
             box-sizing: border-box;
+            z-index: 2;
 
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 767px) {
               text-align: center;
               max-width: 512px;
               display: flex;
@@ -353,7 +354,7 @@
             justify-content: center;
           }
 
-          @media screen and (max-width: 768px) {
+          @media screen and (max-width: 767px) {
             width: 100%;
             display: flex;
             justify-content: center;
